# website

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
bc_website/: __main__.py  main.py
bc_website/app/: __init__.py  app.py  backend.py  home.py  static.py
bc_website/bc_website/app/templates/: test.html
bc_website/static/: style.css  styles.css
bc_website/templates/: index.html
k8s/: deploy.yaml  site.yaml
templates/: index.html
website/: __main__.py  app.py
