[tool.poetry]
name = "Beginner.Codes Website"
version = "0.1.0"
description = "The beginner.codes website. Built collaboratively by the members of the Beginner.Codes discord server!"
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
packages = [
    { include = "bc_website" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
SQLAlchemy = "^1.4.22"
aiohttp = "^3.7.4"
uvicorn = "^0.15.0"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
