[tool.poetry]
name = "website"
version = "0.1.0"
description = "The official website for the Beginner.Codes Discord."
authors = ["ZechCodes <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.20.4"
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
